--- a/Contact.css
+++ b/Contact.css
@@ -1,3 +1,405 @@
+ .u-section-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('images/successful-happy-group-of-people-learning-software-engineering-and-business-during-presentation-e1637055354309.jpg');
+  background-position: 50% 50%;
+}
+
 .u-section-1 .u-sheet-1 {
+  min-height: 344px;
+}
+
+.u-section-1 .u-text-1 {
+  font-weight: 500;
+  margin: 60px auto 0;
+}
+
+.u-section-1 .u-text-2 {
+  margin: 20px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 302px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 231px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 173px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 109px;
+  }
+}.u-section-2 .u-sheet-1 {
   min-height: 400px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 400px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-2 .u-form-1 {
+  width: 570px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-input-1 {
+  height: 56px;
+}
+
+.u-section-2 .u-input-2 {
+  height: 56px;
+}
+
+.u-section-2 .u-form-group-3 {
+  margin-left: 0;
+}
+
+.u-section-2 .u-input-3 {
+  height: 56px;
+}
+
+.u-section-2 .u-btn-1 {
+  text-transform: uppercase;
+  padding: 14px 49px 14px 48px;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 638px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 10px 0 0;
+}
+
+.u-section-2 .u-list-1 {
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-auto-columns: calc(50% - 5px);
+  grid-template-columns: repeat(2, calc(50% - 5px));
+  min-height: 193px;
+  grid-gap: 10px;
+}
+
+.u-section-2 .u-list-item-1 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 0 10px;
+}
+
+.u-section-2 .u-group-elements-1 {
+  min-height: 70px;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-icon-1 {
+  width: 70px;
+  height: 70px;
+  background-image: none;
+  margin: 0 200px 0 0;
+  padding: 13px;
+}
+
+.u-section-2 .u-text-4 {
+  font-weight: 700;
+  margin: -66px 0 0 79px;
+}
+
+.u-section-2 .u-text-5 {
+  font-size: 1rem;
+  margin: 8px 0 0 79px;
+}
+
+.u-section-2 .u-list-item-2 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 0 10px;
+}
+
+.u-section-2 .u-group-elements-2 {
+  min-height: 70px;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-icon-2 {
+  width: 70px;
+  height: 70px;
+  background-image: none;
+  margin: 0 200px 0 0;
+  padding: 13px;
+}
+
+.u-section-2 .u-text-6 {
+  font-weight: 700;
+  margin: -66px 0 0 79px;
+}
+
+.u-section-2 .u-text-7 {
+  font-size: 1rem;
+  margin: 8px 0 0 79px;
+}
+
+.u-section-2 .u-list-item-3 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+}
+
+.u-section-2 .u-container-layout-5 {
+  padding: 0 10px;
+}
+
+.u-section-2 .u-group-elements-3 {
+  min-height: 70px;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-icon-3 {
+  width: 70px;
+  height: 70px;
+  background-image: none;
+  margin: 0 200px 0 0;
+  padding: 13px;
+}
+
+.u-section-2 .u-text-8 {
+  font-weight: 700;
+  margin: -66px 0 0 79px;
+}
+
+.u-section-2 .u-text-9 {
+  font-size: 1rem;
+  margin: 8px 0 0 79px;
+}
+
+.u-section-2 .u-text-10 {
+  margin: 30px 0 0;
+}
+
+.u-section-2 .u-social-icons-1 {
+  height: 40px;
+  min-height: 16px;
+  width: 240px;
+  min-width: 120px;
+  margin: 30px 340px 0 0;
+}
+
+.u-section-2 .u-icon-4 {
+  height: 100%;
+}
+
+.u-section-2 .u-icon-5 {
+  height: 100%;
+}
+
+.u-section-2 .u-icon-6 {
+  height: 100%;
+}
+
+.u-section-2 .u-icon-7 {
+  height: 100%;
+}
+
+.u-section-2 .u-icon-8 {
+  height: 100%;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 289px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 289px;
+  }
+
+  .u-section-2 .u-form-1 {
+    width: 410px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 461px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 136px;
+  }
+
+  .u-section-2 .u-group-elements-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-group-elements-2 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-group-elements-3 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-form-1 {
+    width: 300px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 702px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: calc(100% + 0px);
+    grid-template-columns: 100%;
+    min-height: 297px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-layout-cell-1 {
+    order: 1;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 100px;
+    order: 0;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: 100%;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 651px;
+}
+
+.u-section-3 .u-map-1 {
+  height: 570px;
+  width: 1159px;
+  margin: 29px auto 52px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-map-1 {
+    width: 940px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-map-1 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-map-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-map-1 {
+    width: 340px;
+  }
 }
